apps/wiki/wiki/networkpolicies/egress-wiki.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-wiki
  namespace: wiki
spec:
  selector: >-
    app == 'wiki' &&
    component == 'wiki'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: >-
          app == 'wiki' &&
          component == 'postgres'
        ports:
          - 5432
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 80
          - 443
          - 587
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
        ports:
          - 8443  # oidc
