apps/wiki/wiki/networkpolicies/ingress-nginx-egress-wiki.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-egress-wiki
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
  egress:
    - toEndpoints:
        - matchLabels:
            app: wiki
            component: wiki
            "k8s:io.kubernetes.pod.namespace": wiki
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
