apps/wiki/wiki/networkpolicies/nginx-egress-wiki.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nginx-egress-wiki
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  egress:
    - toServices:
        - k8sService:
            serviceName: wiki
            namespace: wiki
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
