apps/wiki/wiki/networkpolicies/wiki-egress-traefik.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: wiki-egress-traefik
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'wiki'
        selector: >-
          app == 'wiki' &&
          component == 'wiki'
        ports:
          - 3000
